# Crewai-Agentic-Projects

./: Automate_Event_Planning.ipynb  CrewAi_Multi_Agents(blog_writer).ipynb  Crewai_Multi_Agents(Blog_Writer).ipynb  Financial_Analyst_Agent.ipynb  Job_Application_Crew.ipynb  Planning_Crewai.ipynb  README.md  Testing_Crewai.ipynb  Training_Crewai.ipynb
developer_agents_02/: README.md  pyproject.toml
developer_agents_02/src/multiple_agents_02/: main.py  main1.py
developer_agents_02/src/multiple_agents_02/crews/dev_crew/: dev_crew.py
developer_agents_02/src/multiple_agents_02/crews/dev_crew/config/: agents.yaml  tasks.yaml
event_planner_agent_03/: README.md  pyproject.toml
event_planner_agent_03/src/event_planner_agent_03/: main.py  main1.py
event_planner_agent_03/src/event_planner_agent_03/crews/event_planner/: event_planner.py
event_planner_agent_03/src/event_planner_agent_03/crews/event_planner/config/: agents.yaml  tasks.yaml
knowledge_str/: README.md  poem.txt  pyproject.toml
knowledge_str/src/knowledge_str/: main.py  main1.py  main2.py
research_dual_agent_02/: README.md  poem.txt  pyproject.toml
research_dual_agent_02/src/research_dual_agent_02/: main.py  main1.py
research_dual_agent_02/src/research_dual_agent_02/crews/research_agent/: research_agent.py
research_dual_agent_02/src/research_dual_agent_02/crews/research_agent/config/: agents.yaml  tasks.yaml
