[project]
name = "event_planner_agent_03"
version = "0.1.0"
description = "event_planner_agent-03 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "event_planner_agent_03.main:kickoff"
plot = "event_planner_agent_03.main:plot"
planner = "event_planner_agent_03.main1:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
