[project]
name = "knowledge_str"
version = "0.1.0"
description = "knowledge_str using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "google-generativeai>=0.8.4",
    "litellm>=1.60.2",
]

[project.scripts]
kickoff = "knowledge_str.main:kickoff"
kn = "knowledge_str.main1:knowledge"
kn1 = "knowledge_str.main2:knowledge_csv"

plot = "knowledge_str.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
